# deviceai-runtime-sdks

./: .gitignore  .gitmodules  Makefile  Package.swift  README.md
.github/workflows/: ci.yml  publish.yml
cpp/speech/: deviceai_speech_engine.cpp  deviceai_speech_engine.h
gradle/: libs.versions.toml
kmp/speech/: build.gradle.kts
kotlin/core/: build.gradle.kts
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/: DeviceCapabilities.android.kt  LifecycleFlush.android.kt  SdkInfo.android.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/backend/: BackendFactory.android.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/jni/: CoreJniBridge.kt  HttpResult.kt  JniBackendClient.kt  JniHttpExecutor.kt  JniStorageExecutor.kt  JniTelemetryEngine.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/telemetry/: DeviceProfile.android.kt  TelemetryLock.android.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/models/: ModelStorage.android.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/: CloudConfig.kt  DeviceAI.kt  DeviceCapabilities.kt  InternalDeviceAiApi.kt  SdkInfo.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/backend/: BackendClient.kt  BackendClientImpl.kt  BackendFactory.kt  IBackendClient.kt  ManagedTelemetrySink.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/telemetry/: DeviceProfile.kt  ITelemetryEngine.kt  InferenceEvent.kt  NetworkPolicy.kt  TelemetryEngine.kt  TelemetryEngineImpl.kt  TelemetryEvent.kt  TelemetryLock.kt  TelemetryReporter.kt  TelemetrySink.kt  TelemetryUtils.kt
kotlin/core/src/iosMain/kotlin/dev/deviceai/core/: SdkInfo.ios.kt
kotlin/core/src/iosMain/kotlin/dev/deviceai/core/telemetry/: DeviceProfile.ios.kt  TelemetryLock.ios.kt
kotlin/core/src/jvmMain/kotlin/dev/deviceai/core/: LifecycleFlush.jvm.kt  SdkInfo.jvm.kt
kotlin/core/src/jvmMain/kotlin/dev/deviceai/core/telemetry/: DeviceProfile.jvm.kt
kotlin/llm/: build.gradle.kts
kotlin/llm/cmake/llm-jni-android/: CMakeLists.txt
kotlin/llm/cmake/llm-jni-desktop/: CMakeLists.txt
kotlin/llm/src/commonMain/cpp/: CMakeLists.txt  llm_jni.cpp
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/: ChatConfig.kt  ChatSession.kt
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/rag/: RagAugmentor.kt
kotlin/llm/src/iosMain/cpp/: llm_ios.cpp
kotlin/llm/src/jvmCommonMain/kotlin/dev/deviceai/llm/engine/: LlmJniEngine.kt
kotlin/speech/: build.gradle.kts
kotlin/speech/cmake/speech-jni-desktop/: CMakeLists.txt
kotlin/speech/cmake/speech-wrapper-ios/: CMakeLists.txt
kotlin/speech/src/androidMain/kotlin/dev/deviceai/: SpeechBridge.android.kt
kotlin/speech/src/commonMain/cpp/: CMakeLists.txt  deviceai_tts_jni.cpp  deviceai_whisper_jni.cpp  piper_jni.cpp  whisper_jni.cpp
kotlin/speech/src/commonMain/kotlin/dev/deviceai/: SpeechBridge.kt  SttConfig.kt  TtsConfig.kt
kotlin/speech/src/commonMain/kotlin/dev/deviceai/models/: ModelRegistry.kt
kotlin/speech/src/iosMain/c_interop/: speech_ios.def
kotlin/speech/src/iosMain/cpp/: deviceai_tts_ios.cpp
kotlin/speech/src/iosMain/kotlin/dev/deviceai/: SpeechBridge.ios.kt
kotlin/speech/src/jvmMain/kotlin/dev/deviceai/: SpeechBridge.jvm.kt
runtime-llm/: build.gradle.kts
samples/composeApp/src/commonMain/kotlin/dev/deviceai/demo/: LlmScreen.kt  LlmViewModel.kt  SpeechViewModel.kt
samples/ios/: Makefile  project.yml
samples/ios/Sources/App/: AppContainer.swift  DeviceAILabsApp.swift
samples/ios/Sources/Data/: LiveChatRepository.swift  LiveSpeechRepository.swift
samples/ios/Sources/Features/Chat/: ChatView.swift
samples/ios/Sources/Features/Main/: MainView.swift
samples/ios/Sources/Features/Speech/: SpeechView.swift
samples/ios/Sources/Shared/: AppTheme.swift
scripts/: build-xcframeworks.sh  post-checkout  post-merge
sdk/deviceai-commons/: CMakeLists.txt  VERSIONS
sdk/deviceai-commons/cmake/: FetchDependencies.cmake
sdk/deviceai-commons/scripts/: download-sherpa-onnx.sh
sdk/deviceai-commons/src/backends/llamacpp/: CMakeLists.txt
sdk/deviceai-commons/src/backends/sherpa_onnx/: CMakeLists.txt
sdk/deviceai-commons/src/backends/whisper/: CMakeLists.txt
sdk/deviceai-commons/src/bridges/jni/: CMakeLists.txt  dai_core_jni.cpp  deviceai_llm_jni.cpp  deviceai_tts_jni.cpp  deviceai_whisper_jni.cpp
sdk/deviceai-commons/src/core/: CMakeLists.txt
sdk/deviceai-commons/src/core/include/deviceai/: dai_backend.h  dai_core.h  dai_platform.h  dai_session.h  dai_telemetry.h
sdk/deviceai-commons/src/core/src/: backend_client.cpp  session_store.cpp  telemetry_engine.cpp
sdk/deviceai-commons/src/features/llm/: llm_engine.cpp
sdk/deviceai-commons/src/utils/: json_builder.h
swift/: Package.swift
swift/Sources/CDeviceAI/: llm_engine.cpp  stt_engine.cpp  tts_engine.cpp
swift/Sources/CDeviceAI/include/: dai_llm.h  dai_stt.h  dai_tts.h  shim.h
swift/Sources/DeviceAILLM/: ChatSession.swift
swift/Sources/DeviceAiCore/: DeviceAI.swift
swift/Sources/DeviceAiLlm/Engine/: LlamaEngine.swift
swift/Sources/DeviceAiLlm/Session/: ChatConfig.swift  ChatSession.swift
swift/Sources/DeviceAiStt/Engine/: AVAudioPCMConverter.swift  WhisperEngine.swift
